--- a/public/Content/app.css
+++ b/public/Content/app.css
@@ -23,8 +23,8 @@
     
     header{
         height: 100vh;
-        width: 110%;
-        background-image: linear-gradient(rgba(0,0,0,0.5),rgba(0,0,0,0.5)),url('../Assets/images/survey.jpg');
+        width: 130%;
+        background-image: url('../Assets/images/survey.jpg');
         background-repeat: no-repeat;
         background-size: cover;
         background-position: center;
@@ -69,7 +69,7 @@
        }
        
        .content-box p{
-           color: #fff;
+           color:brown;
            font-size: 20px;
        }
        
